# Passwords_Fastapi

./: .dockerignore  .example-env  .gitignore  .test.env  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  start.sh  test-docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 1e03e05f825a_.py  2e43401663bd_edited_backups_table.py  30ca20228652_new_migration.py  58acc5f88987_init.py  ef1f1b1c9884_tables_users_and_backups.py
nginx/: nginx.conf
scripts/: deploy.sh  nginx_configure.py  start_api.sh  start_bot.sh
src/: dependincies.py  main.py
src/api/: passwords.py  static_pages.py  users.py
src/bot/: bot.py  main.py
src/core/: database.py  logger.py  schemas.py  settings.py  templates.py
src/dao/: backupDao.py  role_dao.py  session_dao.py  userDao.py
src/exceptions/: handlers.py
src/metrics/: middleware.py  router.py  storage.py
src/models/: model.py
src/routers/api/: passwords.py  statistic.py  users.py
src/schemas/: api_responses.py  base.py  dao_schemas.py  db_schema.py  jinja_context.py  jwt.py
src/services/: backup_service.py  cookies.py  jwt_service.py  secrets.py
static/css/: styles.css
templates/: 404.html  base.html  dashboard.html  docs.html  faq.html  forgot_password.html  home.html  how_it_works.html  login.html  pricing.html  product.html  register.html  security.html  user_backup.html
tests/: conftest.py
tests/api_tests/: conftest.py  test_passwords.py  test_users.py
tests/unit_tests/: test_jwt.py  test_pydantic_models.py  test_secrets.py
(+20 files in other folders)
